<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="PrivateResource">FinancerPro</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="app_name_extended">Financer Pro</string>
    <string name="app_explanation">Takes care of your finances</string>
    <string name="title_activity_check_calculator">CheckCalculatorActivity</string>
    <string name="title_activity_expense_tracker">ExpenseTrackerActivity</string>
    <string name="people">People</string>
    <string name="bills">Bills</string>
    <string name="balance">Balance</string>
    <string name="main_activity">Main Activity</string>
    <string name="expenses_list">Expenses List</string>
    <string name="amount">Amount:</string>
    <string name="placeholder_amount">$25.6</string>
    <string name="description">Description:</string>
    <string name="placeholder_description">Monthly Rent</string>
    <string name="date">Date:</string>
    <string name="placeholder_date">1/1/2017</string>
    <string name="category">Category:</string>
    <string name="placeholder_category">House</string>
    <string name="add_photo">Add Photo</string>
    <string name="money_spent">Money Spent:</string>
    <string name="person_name">Person Name:</string>
    <string name="placeholder_name">John Doe</string>
    <string name="explanation">Explanation:</string>
    <string name="placeholder_explanation">Paid for the bowling</string>
    <string name="no_balance">No balance to show.</string>
    <string name="person_paid">Person Paid</string>
    <string name="amount1">Amount</string>
    <string name="name">Name</string>
    <string name="money_spent1">Money Spent</string>
    <string name="bill_info">Bill Info</string>
    <string name="placeholder_expense_name">Name of the Expense</string>
    <string name="category1">Category</string>
    <string name="expense_tracker">Expense Tracker</string>
    <string name="check_calculator">Check Calculator</string>
    <string name="title_activity_debt_tracker">DebtTrackerActivity</string>
    <string name="title_chart_view">ChartView</string>
    <string name="app_motto">The Ultimate Finance Experience</string>
</resources>
